fix: missing border on mobile view

--- a/src/app/components/events/events-list/events-list-table/events-list-table.component.scss
+++ b/src/app/components/events/events-list/events-list-table/events-list-table.component.scss
@@ -66,10 +66,6 @@
     justify-content: space-between;
     z-index: 2;
 
-    &:nth-of-type(1) {
-        border-top: none;
-    }
-
     h2 {
         font-size: 1rem;
         margin: 1rem;
